#1608 prevent line breaks in english dates

--- a/src/main/webapp/assets/styles/fdz.css
+++ b/src/main/webapp/assets/styles/fdz.css
@@ -2215,6 +2215,10 @@ md-input-container label {
   text-align: right;
   white-space: nowrap; }
 
+.fdz-table-date {
+  text-align: left;
+  white-space: nowrap; }
+
 .fdz-table-total-number {
   text-align: right;
   font-weight: bold;
